02-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: node:20-alpine
        command: ["sh", "-c"]
        args:
          - "npm install express mysql2 cors --no-fund --no-audit --silent && node server.js"
        workingDir: /app
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: backend-code
          mountPath: /app/server.js
          subPath: server.js
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 15
      volumes:
      - name: backend-code
        configMap:
          name: backend-code

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: webapp
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: backend
